--- a/grupo/Sites/public/login.html
+++ b/grupo/Sites/public/login.html
@@ -85,6 +85,7 @@
                         sessionStorage.EMAIL_USUARIO = json.email;
                         sessionStorage.NOME_USUARIO = json.nome;
                         sessionStorage.ID_USUARIO = json.idUsuario;
+                        sessionStorage.FK_EMPRESA = json.fkEmpresa
 
                         alert('Logando')
 
