Cadastrando todos dados da empresa e usuario com a fkEmpresa

--- a/grupo/Sites/public/cadastro.html
+++ b/grupo/Sites/public/cadastro.html
@@ -542,6 +542,7 @@
                 ruaEndeEmpresaServer: ruaEndeEmpresa,
                 bairoEndeEmpresaServer: bairoEndeEmpresa,
                 estadoEndeEmpresaServer: estadoEndeEmpresa,
+                cnpjEmpresaServer: cnpjEmpresa,
             }),
         })
             .then(function (resposta) {
