--- a/grupo/Sites/public/cadastro.html
+++ b/grupo/Sites/public/cadastro.html
@@ -56,7 +56,7 @@
                     <label class="w-40">
                         <span>CNPJ:</span>
                         <input type="text" id="ipt_cnpj" placeholder="Ex: 00.000.000/0000-00" maxlength="18"
-                            onkeyup="formatarCnpj()">
+                        onkeyup="formatarCnpj()">
                     </label>
                 </div>
                 <div class="linha-input">
@@ -71,12 +71,12 @@
                         <span>Telefone Fixo:</span>
                         <input id="ipt_telefone" placeholder="(11) 8255-1524" maxlength="14"
                             onkeyup="formatarTellFixo()">
-                    </label>
-                    <label class="w-50">
-                        <span>Telefone Celular:</span>
-                        <input id="ipt_telefone_2" placeholder="(11) 98255-1524" maxlength="15"
+                        </label>
+                        <label class="w-50">
+                            <span>Telefone Celular:</span>
+                            <input id="ipt_telefone_2" placeholder="(11) 98255-1524" maxlength="15"
                             onkeyup="formatarTellCell()">
-                    </label>
+                        </label>
                 </div>
                 <div class="linha-input">
                     <label class="w-33">
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="div-forms-cad">
-                <div class="msg-erros" id="div_msg_erros_2"> <!--erros aqui--> </div>
+                <div class="msg-erros" id="div_msg_erros_2"><!--erros aqui--> </div>
                 <div class="linha-input">
                     <label class="w-40">
                         <span>Nome:</span>
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="outros-links">
-                <div class="container-btn">
+                <div class="container-btn" id="div_carregamento" style="flex-direction: row;">
                     <button onclick="voltar_p1()" class="btn-etapa">Voltar</button>
                     <button onclick="avancar_p2()" class="btn-cadastrar">Cadastrar</button>
                 </div>
@@ -265,7 +265,7 @@
             buscarPorCnpj()
         }
         div_msg_erros.style.display = 'block'
-        div_msg_erros.innerHTML = msg
+        div_msg_erros.innerHTML = msg;
     }
 
     function avancar_p2() {
@@ -300,8 +300,7 @@
             validarCodigo()
         }
         div_msg_erros_2.style.display = 'block'
-        div_msg_erros_2.innerHTML = msg
-
+        div_msg_erros_2.innerHTML = msg;
     }
 
     function voltar_p1() {
@@ -482,13 +481,12 @@
                 console.log("resposta: ", resposta);
 
                 if (resposta.ok) {
-                    alert(
-                        "Cadastro realizado com sucesso! Redirecionando para tela de Login...")
+                    div_carregamento.innerHTML = `Cadastro realizado com sucesso! Redirecionando para tela de Login...<br>
+                    <img src="./src/imagens/loading.gif" alt="" width = '100px'>`;
                         
                     setTimeout(() => {
                         window.location = './login.html'
                     }, "2000");
-
 
                 } else {
                     throw "Houve um erro ao tentar realizar o cadastro!";
